--- a/_sass/projects.scss
+++ b/_sass/projects.scss
@@ -1,3 +1,5 @@
+@import "variables";
+
 .video-container {
   position: relative;
   background-color: black;
@@ -49,6 +51,7 @@
 .project-info {
 	cursor: pointer;
 	margin: 0 auto;
+  transform-style: preserve-3d;
 
 	img {
 		position: absolute;
@@ -68,6 +71,12 @@
 	  transform: translateX(-50%) translateY(-50%);
 	  z-index: 5;
 	}
+
+  &:hover {
+    .project-client {
+      opacity: 1;
+    }
+  }
 }
 
 .project-title {
@@ -78,12 +87,34 @@
 	text-align: center;
 	z-index: 100;
 	line-height: 10vw;
+  transform: translateZ(60px)
+}
+
+.project-outside {
+  @include smooth-transition;
+  position: absolute;
+  font-size: 20px;
+  @media (min-width: $md) {
+    font-size: 30px;
+  }
+  font-family: Graphik;
+  left: 0;
+  right: 0;
+  z-index: 100;
+  opacity: 0;
+  transform: translateZ(20px)
+}
+
+.project-year {
+  top: 0;
 }
 
 .project-client {
-	position: relative;
-	font-size: 30px;
-	margin-top: 30px;
-	font-family: Graphik;
-	z-index: 100;
+  top: 30vh;
+  @media (min-width: $md) {
+    top: 50vh;
+  }
+  @media (min-width: $lg) {
+    top: 60vh;
+  }
 }
