change client font size

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,8 +1,10 @@
-<section id="contact">
-		<h1>Contact</h1>
-		<div class="contact-links">
-			<a href="mailto:{{site.email}}">Email</a>
-			<a href="mailto:{{site.email}}">YouTube</a>
-			<a href="mailto:{{site.email}}">Linkedin</a>
-		</div>
-</section>
+<div class="section">
+	<section id="contact">
+			<h1>Contact</h1>
+			<div class="contact-links">
+				<a href="mailto:{{site.email}}">Email</a>
+				<a href="mailto:{{site.email}}">YouTube</a>
+				<a href="mailto:{{site.email}}">Linkedin</a>
+			</div>
+	</section>
+</div>
