--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,7 +1,8 @@
 {% assign projects = site.projects | sort: "order" %}
 {% for project in projects %}
 	<div class="section " id="section{{ forloop.index }}">
-		<video data-autoplay muted loop preload="auto">
+		<div class="overlay"></div>
+		<video data-autoplay data-keepplaying muted loop preload="auto">
 			<source src="{{project.clip_url.mp4}}" type="video/mp4">
 			<source src="{{project.clip_url.webm}}" type="video/webm">
 		</video>
