redesign and use tiles no fullpage

--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -24,7 +24,20 @@ h1 {
 	font-size: 60px;
 }
 
+h4 {
+	text-transform: uppercase;
+	font-family: Graphik;
+	font-size: 18px;
+	letter-spacing: 2.94px;
+}
+
 a {
 	font-family: 'Graphik';
 	color: black;
+}
+
+p {
+	font-size: 16px;
+	line-height: 32px;
+	opacity: 0.8;
 }
