--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -5,6 +5,7 @@ html, body {
   width: 100%;
   padding: 0;
   margin: 0;
+  background-color: #1A1A1A;
 }
 
 * {
@@ -20,6 +21,22 @@ html, body {
         -ms-user-select: none; /* Internet Explorer/Edge */
             user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome and Opera */
+}
+
+img {
+  opacity: 0;
+  @include smooth-transition;
+}
+
+section {
+  margin: 100px auto;
+  min-height: 100vh;
+  width: calc(100vw - 200px);
+}
+
+.section-title {
+  margin-bottom: 100px;
+  text-align: center;
 }
 
 nav {
