change hero looks super frickin cool

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,15 @@
-<section>
-	<div id="hero" class="d-flex flex-column justify-content-center">
-		<h1 class="name">Ashley Xu</h1>
-		<h4 class="tagline">Filmmaker // Creative</h4>
+<section id="hero">
+	<div class="d-flex flex-column justify-content-center">
+		<div id="showreel" class="lazy" data-src="/uploads/poster/showreel.jpg">
+			<video autoplay muted loop preload="auto">
+				<source src="/uploads/videos/showreel.mp4" type="video/mp4">
+				<source src="/uploads/videos/showreel.webm" type="video/webm">
+			</video>
+		</div>
+		<p class="tagline">Filmmaker & Creative based in Palo Alto.</p>
+		<a href="#work" id="hero-cta-button">
+			<h4 id="hero-cta-text">See My Work</h4>
+			<div class="circle"></div>
+		</a>
 	</div>
-</div>
+</section>
