--- a/assets/css/main_css_file.scss
+++ b/assets/css/main_css_file.scss
@@ -3,5 +3,6 @@
 @import "globals";
 @import "typography";
 @import "projects";
-@import "hero";
+@import "home";
 @import "project_page";
+@import "nav";
