--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,11 +1,14 @@
-<section>
-	<h4 class="section-title">About</h4>
-	<div class="row">
-		<div class="col-md-6">
-		</div>
-		<div class="col-md-6">
-			<h1>About</h1>
-			<p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam id dolor id nibh ultricies vehicula ut id elit. Donec ullamcorper nulla non metus auctor fringilla. Praesent commodo cursus magna, vel scelerisque nisl consectetur et. Integer posuere erat a ante venenatis dapibus posuere velit aliquet.</p>
+<section id="about">
+	<div class="container">
+		<h4 class="section-title">About</h4>
+		<div class="row">
+			<div class="col-md-6 left-col">
+				<img src="/uploads/about.jpg" id="about-image" class="lazy">
+			</div>
+			<div class="col-md-6 right-col d-flex flex-column justify-content-center">
+				<h1 class="title">About</h1>
+				<p class="description">I'm a filmmaker based in Palo Alto, CA. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+			</div>
 		</div>
 	</div>
 </section>
