--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,6 +1,7 @@
-<nav class="navbar navbar-expand-lg fixed-top" data-aos="fade-in">
+<nav class="navbar navbar-expand-lg" data-aos="fade-in">
 	<a class="navbar-brand nav-color-control" href="/">ash.</a>
 	<ul class="navbar-nav ml-auto">
+		<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#contact">About</a></li>
 		<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#contact">Contact</a></li>
 	</ul>
 </nav>
