--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,22 +1,25 @@
-<section>
+<section id="work">
 	<div class="container">
 		<h4 class="section-title">My Work</h4>
 		{% assign projects = site.projects | sort: "order" %}
 		<div class="row">
 			{% for project in projects %}
 				<div class="col-md-6 project-col
-							{% cycle 'left-col', 'right-col' %}">
-					<div class="project-container no-underline">
+					{% cycle 'left-col', 'right-col' %}">
+					<div class="singlevidjs project-container lazy" data-src="{{project.image_url}}">
 						<a href="{{project.url}}">
-							<div class="project-darken-overlay"></div>
-							<img src="{{project.image_url}}">
+							<video muted loop preload="auto">
+								<source src="{{project.clip_url.mp4}}" type="video/mp4">
+								<source src="{{project.clip_url.webm}}" type="video/webm">
+							</video>
+							<!-- <img src="{{project.image_url}}"> -->
 							<div class="project-text">
 								<h4 class="project-title">{{project.title}}</h4>
 								<p class="project-info">{{project.client}}</p>
 							</div>
 						</a>
 					</div>
-				</div>	
+				</div>
 			{% endfor %}
 		</div>
 	</div>
