--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -1,6 +1,6 @@
 @import "variables";
 
-.right-col {
+.row .right-col {
   @media (min-width: $md) {
     margin-top: 150px;
   }
@@ -15,21 +15,19 @@
   width: 100%;
   height: 400px;
   position: relative;
+  background-position: center center;
+  background-size: cover;
+  background-blend-mode: multiply;
+  background-color: rgba(0,0,0,.5); // Tint color
+  background-blend-mode: multiply;
 }
 
-/*.project-darken-overlay {
-  background-color: black;
-  opacity: 0.3;
-  width: 100%;
-  height: 100%;
-  position: absolute;
-}*/
-
-.project-container img {
+.project-container img, .project-container video {
   object-fit: cover;
   width: 100%;
   height: 100%;
-  filter: brightness(0.4);
+  filter: brightness(0.5);
+  @include smooth-transition;
 }
 
 .project-text {
