--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -16,7 +16,7 @@
 
 #background-name {
   font-size: 17vw;
-  font-family: SaolDisplay-Regular;
+  font-family: Saol Display;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
 }
