--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -1,14 +1,14 @@
 @font-face {
-	font-family: 'Ogg';
-	src: url('/assets/fonts/Ogg-Roman.ttf')  format('truetype');
-	font-weight: normal;
+	font-family: 'Saol Display';
+	src: url('/assets/fonts/SaolDisplay-Light.ttf')  format('truetype');
+	font-weight: lighter;
   font-style: normal;
 }
 
 @font-face {
 	font-family: 'Saol Display';
-	src: url('/assets/fonts/SaolDisplay-Light.ttf')  format('truetype');
-	font-weight: lighter;
+	src: url('/assets/fonts/SaolDisplay-Regular.ttf')  format('truetype');
+	font-weight: normal;
   font-style: normal;
 }
 
