--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,9 +6,9 @@
 				<source src="/uploads/videos/showreel.webm" type="video/webm">
 			</video>
 		</div>
-		<p class="tagline">Filmmaker & Creative based in Palo Alto.</p>
-		<a href="#work" id="hero-cta-button">
-			<h4 id="hero-cta-text">See My Work</h4>
+		<p class="tagline">{{site.data.general.tagline}}</p>
+		<a href="#creative" id="hero-cta-button">
+			<h4 id="hero-cta-text">{{ site.data.general.see_my_work_button }}</h4>
 			<div class="circle"></div>
 		</a>
 	</div>
