--- a/assets/css/main_css_file.scss
+++ b/assets/css/main_css_file.scss
@@ -2,7 +2,8 @@
 ---
 @import "globals";
 @import "typography";
-@import "projects";
-@import "home";
 @import "project_page";
 @import "nav";
+@import "projects";
+@import "home";
+@import "about";
