--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,13 +1,13 @@
 <section id="about">
 	<div class="container">
-		<h4 class="section-title">About</h4>
+		<h4 class="section-title">{{ site.data.general.about_title }}</h4>
 		<div class="row">
 			<div class="col-md-6 left-col">
 				<img src="/uploads/about.jpg" id="about-image" class="lazy">
 			</div>
 			<div class="col-md-6 right-col d-flex flex-column justify-content-center">
 				<h1 class="title">About</h1>
-				<p class="description">I'm a filmmaker based in Palo Alto, CA. Curabitur blandit tempus porttitor. Sed posuere consectetur est at lobortis. Maecenas faucibus mollis interdum. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+				<p class="description">{{ site.data.general.about_text }}</p>
 			</div>
 		</div>
 	</div>
