--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,9 +1,7 @@
-<script src="/assets/js/jquery.min.js" type="text/javascript"></script>
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/tilt.js/1.2.1/tilt.jquery.min.js"></script> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.8/fullpage.extensions.min.js"></script>
-<script src="/assets/js/fullpage.scrollHorizontally.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/3.0.4/fullpage.min.js"></script> -->
-<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/pagePiling.js/1.5.6/jquery.pagepiling.min.js"></script> -->
-<script src="https://vjs.zencdn.net/7.7.6/video.js"></script>
-<script src="/assets/js/unveil2.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<div id="contact-links" class="d-flex flex-row justify-content-center">
+	{% for item in site.data.general.contact_links %}
+		<a href="{% if item.type == 'Email' %}mailto:{% endif %}{{item.url}}" target="_blank">
+			{{ item.type }}
+		</a>
+	{% endfor %}
+</div>
