--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 	{% include head.html %}
 	<body>
 		{{content}}
+		{% include footer.html %}
 	</body>
-	{% include footer.html %}
+	{% include scripts.html %}
 </html>
