--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -35,10 +35,12 @@ img {
 section {
   padding: 100px 5vw;
   min-height: 100vh;
+  margin-bottom: 100px;
 }
 
 .section-title {
-  margin-bottom: 150px;
+  font-weight: bold;
+  margin-bottom: 70px;
   text-align: center;
 }
 
@@ -47,5 +49,19 @@ section {
     &:hover {
       text-decoration: none;
     }
+  }
+}
+
+#contact-links {
+  list-style-type: none;
+  color: white;
+  text-transform: uppercase;
+  letter-spacing: 1px;
+  margin: 100px 0 20px;
+
+  a {
+    color: white;
+    padding: 10px;
+    margin: 10px;
   }
 }
