--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -36,7 +36,7 @@
 
 #hero {
 	padding: 0 14vw;
-	position: relative;
+	height: 80vh;
 }
 
 #hero .tagline {
@@ -49,7 +49,13 @@
 	width: 60vw;
 	z-index: 10;
 	opacity: 1;
-	margin-top: 25vh;
+	margin-top: 30px;
+	@media (min-height: 500px) {
+		margin-top: 10vh;
+	}
+	@media (min-height: 800px) {
+		margin-top: 25vh;
+	}
 }
 
 #showreel {
@@ -60,7 +66,7 @@
 	right: 0;
 	margin-right: 9vw;
 	top: 0;
-	/*margin-top: 15vh;*/
+	margin-top: 15vh;
 	filter: brightness(0.5);
 	z-index: 1;
 }
@@ -73,25 +79,29 @@
 
 #hero-cta-button {
 	/* position at bottom of page*/
-	margin-top: 200px;
+	position: absolute;
+	bottom: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	margin-bottom: 10vh;
 	/* to center the text within the circle */
 	display: flex;
 	justify-content: center;
 	align-items: center;
 
-	h4 {
-		margin-top: 10px;
-		white-space: nowrap;
-	}
-
 	&:hover {
 		.circle {
 			opacity: 1;
 		}
-		h4 {
+		#hero-cta-text {
 			text-decoration: none;
 		}
 	}
+}
+
+#hero-cta-text {
+	margin-top: 10px;
+	white-space: nowrap;
 }
 
 $original-opacity: 0.3;
@@ -120,34 +130,4 @@ $original-opacity: 0.3;
 		transform: scale(1);
 		opacity: $original-opacity;
 	}
-}
-
-/* ====== */
-/* ABOUT */
-/* ====== */
-
-#about-image {
-	filter: brightness(0.5);
-}
-
-$pull-in-margin: -89px;
-
-#about .left-col {
-	margin-right: $pull-in-margin;
-}
-
-#about .right-col {
-	margin-left: $pull-in-margin;
-}
-
-#about .title {
-	font-size: 7rem;
-	margin-bottom: 1rem;
-}
-
-#about .description {
-	font-size: 1.2rem;
-	color: #FFFFFF;
-	line-height: 2.5rem;
-	opacity: 0.9;
 }
