--- a/_sass/_project_page.scss
+++ b/_sass/_project_page.scss
@@ -1,3 +1,7 @@
+#proejct-page {
+	padding-bottom: 200px;
+}
+
 #project-page-video {
 	width: 100%;
 	height: 70vh;
@@ -8,7 +12,7 @@
 	padding: 0 100px;
 }
 
-.project-page-client-n-year {
+.project-page-client-n-date {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
