--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -8,7 +8,10 @@
 
 .project-col {
   padding: 0 40px;
-  margin-bottom: -70px;
+  margin-bottom: 70px;
+  @media (min-width: $md) {
+    margin-bottom: -70px;
+  }
 }
 
 .project-container {
