--- a/_layouts/project_page.html
+++ b/_layouts/project_page.html
@@ -7,6 +7,7 @@ layout: default
 	    class="video-js vjs-default-skin vjs-big-play-centered"
 	    id="project-page-video"
 	    controls
+	    autoplay
 	    preload="auto"
 	    poster="{{page.image_url}}"
 	    data-setup='{ "techOrder": ["youtube"], "sources": [{ "type": "video/youtube", "src": "{{page.youtube_url}}"}] }'
