attempt to add swup and fail

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,4 +1,4 @@
-<section id="hero">
+<section id="hero" class="noselect">
 	<div class="d-flex flex-column justify-content-center">
 		<div id="showreel" class="lazy" data-src="/uploads/poster/showreel.jpg">
 			<video autoplay muted loop preload="auto">
