--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,12 +1,11 @@
 <section id="about">
 	<div class="container">
-		<h4 class="section-title">{{ site.data.general.about_title }}</h4>
 		<div class="row">
 			<div class="col-md-6 left-col">
 				<img src="/uploads/about.jpg" id="about-image" class="lazy">
 			</div>
 			<div class="col-md-6 right-col d-flex flex-column justify-content-center">
-				<h1 class="title">About</h1>
+				<h1 class="title">{{ site.data.general.about_title }}</h1>
 				<p class="description">{{ site.data.general.about_text }}</p>
 			</div>
 		</div>
