--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -17,6 +17,15 @@ html, body {
     text-rendering: optimizeLegibility;
 }
 
+.transition-fade {
+    transition: .4s;
+    opacity: 1;
+}
+
+html.is-animating .transition-fade{
+    opacity: 0;
+}
+
 .noselect {
   -webkit-touch-callout: none; /* iOS Safari */
     -webkit-user-select: none; /* Safari */
