--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,7 +1,7 @@
 <section id="hero" class="noselect">
 	<div class="d-flex flex-column justify-content-center">
 		<div id="showreel" class="lazy" data-src="/uploads/poster/showreel.jpg">
-			<video autoplay muted loop preload="auto">
+			<video autoplay playsinline muted loop preload="auto">
 				<source src="/uploads/videos/showreel.mp4" type="video/mp4">
 				<source src="/uploads/videos/showreel.webm" type="video/webm">
 			</video>
