progress towards mobile friendly and change background text on scroll

--- a/_includes/background_name.html
+++ b/_includes/background_name.html
@@ -1,4 +1,12 @@
-<div class="noselect position-fixed" id="background-container">
+<div class="noselect position-fixed abs-horizontal-center" id="background-container">
 	<span id="strikethrough"></span>
-	<p id="background-name">Ashley Xu</p>
+
+	<div class="marquee">
+		<div class="marquee-inner" aria-hidden="true">
+			<span class="background-text">AshleyXu</span>
+			<span class="background-text">AshleyXu</span>
+			<span class="background-text">AshleyXu</span>
+			<span class="background-text">AshleyXu</span>
+		</div>
+	</div>
 </div>
