--- a/assets/css/main_css_file.scss
+++ b/assets/css/main_css_file.scss
@@ -2,8 +2,11 @@
 ---
 @import "globals";
 @import "typography";
-@import "project_page";
 @import "nav";
+@import "background_name";
+@import "hero";
 @import "projects";
-@import "home";
 @import "about";
+@import "footer";
+
+@import "project_page";
