--- a/_includes/about.html
+++ b/_includes/about.html
@@ -1,4 +1,4 @@
-<section id="about">
+<section id="about" data-background-text="AboutMe">
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 left-col">
