--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,5 @@
 <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
+<script src="/assets/js/jquery.visible.min.js"></script>
 <script src="/assets/js/detect_mobile.min.js"></script>
 <!-- <script src="/assets/js/swup.min.js" type="text/javascript"></script> -->
 <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script>
