--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -7,8 +7,10 @@
 }
 
 .project-col {
-  padding: 0 40px;
-  margin-bottom: 70px;
+  @media (min-width: $md) {
+    padding: 0 40px;
+  }
+  margin-bottom: 30px;
   @media (min-width: $md) {
     margin-bottom: -70px;
   }
@@ -16,13 +18,19 @@
 
 .project-container {
   width: 100%;
-  height: 400px;
   position: relative;
   background-position: center center;
   background-size: cover;
   background-blend-mode: multiply;
-  background-color: rgba(0,0,0,.5); // Tint color
-  background-blend-mode: multiply;
+  background-color: rgba(0,0,0,.5); // Make background dark
+
+  height: 250px;
+  @media (min-width: $sm) {
+    height: 300px;
+  }
+  @media (min-width: $md) {
+    height: 400px;
+  }
 }
 
 .project-container img, .project-container video {
@@ -45,8 +53,10 @@
   text-transform: uppercase;
   font-weight: normal;
   margin-bottom: 0.5rem;
-  font-size: 22px;
-  letter-spacing: 3.5px;
+  @media (min-width: $md) {
+    font-size: 17px;
+    letter-spacing: 3.5px;
+  }
 }
 
 .project-info {
