--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,6 +20,7 @@
   <meta name="theme-color" content="#ffffff">
 
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/gh/cferdinandi/smooth-scroll@14/dist/smooth-scroll.polyfills.min.js"></script>
   <link href="https://vjs.zencdn.net/7.7.6/video-js.css" rel="stylesheet" />
   <link rel="stylesheet" href="/assets/css/main_css_file.css">
 </head>
