--- a/_sass/_background_name.scss
+++ b/_sass/_background_name.scss
@@ -27,6 +27,7 @@
   font-family: Saol Display;
   letter-spacing: 0.2rem;
   text-transform: uppercase;
+  font-weight: normal;
 }
 
 #strikethrough {
@@ -52,7 +53,7 @@
     position: relative;
     transform: translate3d(var(--move-initial), 0, 0);
     animation: marquee 30s linear infinite;
-    animation-play-state: running;
+    /*animation-play-state: running;*/
 }
 
 @keyframes marquee {
