--- a/_sass/_projects.scss
+++ b/_sass/_projects.scss
@@ -38,7 +38,7 @@
   width: 100%;
   height: 100%;
   filter: brightness(0.5);
-  @include smooth-transition;
+  @include smooth-transition(0.25s);
 }
 
 .project-text {
