--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,12 +4,12 @@ $sm: 576px;
 $md: 768px;
 $lg: 992px;
 
-@mixin smooth-transition {
-  -webkit-transition: all 0.25s; /* Safari and Chrome */
-  -moz-transition: all 0.25s; /* Firefox */
-  -ms-transition: all 0.25s; /* IE 9 */
-  -o-transition: all 0.25s; /* Opera */
-  transition: all 0.25s;
+@mixin smooth-transition($time) {
+  -webkit-transition: all $time; /* Safari and Chrome */
+  -moz-transition: all $time; /* Firefox */
+  -ms-transition: all $time; /* IE 9 */
+  -o-transition: all $time; /* Opera */
+  transition: all $time;
 }
 
 /* colors */
