--- a/_includes/about.html
+++ b/_includes/about.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-6 left-col">
-				<img src="/uploads/about.jpg" id="about-image" class="lazy">
+				<img src="{{site.data.general.about_image}}" id="about-image" class="lazy">
 			</div>
 			<div class="col-md-6 right-col d-flex flex-column justify-content-center">
 				<h1 class="title">{{ site.data.general.about_title }}</h1>
