--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,8 +1,20 @@
+<!-- jquery -->
 <script src="/assets/js/jquery.min.js" type="text/javascript"></script>
+<!-- jquery visible plugin -->
 <script src="/assets/js/jquery.visible.min.js"></script>
+<!-- script to detect if user is on mobile -->
 <script src="/assets/js/detect_mobile.min.js"></script>
-<!-- <script src="/assets/js/swup.min.js" type="text/javascript"></script> -->
+<!-- Popper.js -->
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+<!-- Bootstrap -->
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+<!-- video.js -->
 <script src="https://vjs.zencdn.net/7.7.6/video.js"></script>
+<!-- video.js youtube plugin -->
 <script src="/assets/js/youtube.min.js"></script>
+<!-- unveil -->
 <script src="/assets/js/unveil2.min.js"></script>
-<script src="/assets/js/main.js"></script>
+<!-- swup -->
+<script src="/assets/js/swup.min.js" type="text/javascript"></script>
+
+<script src="/assets/js/main.js" type="text/javascript"></script>
