--- a/_sass/_project_page.scss
+++ b/_sass/_project_page.scss
@@ -1,10 +1,4 @@
-#proejct-page {
-	@media (min-width: $md) {
-		padding-bottom: 200px;
-	}
-}
-
-#project-page-video {
+.project-page-video {
 	width: 100%;
 	height: 70vh;
 }
