--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,12 @@
-<nav class="navbar navbar-expand-lg" data-aos="fade-in">
+<nav class="navbar navbar-expand-lg navbar-dark" data-aos="fade-in">
 	<a class="navbar-brand nav-color-control" href="/">ash.</a>
-	<ul class="navbar-nav ml-auto">
-		<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#about">About</a></li>
-		<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#contact">Contact</a></li>
-	</ul>
+	<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+	<span class="navbar-toggler-icon"></span>
+	</button>
+	<div class="collapse navbar-collapse" id="navbarSupportedContent">
+		<ul class="navbar-nav ml-auto">
+			<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#about">About</a></li>
+			<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#contact">Contact</a></li>
+		</ul>
+	</div>
 </nav>
