--- a/_sass/_nav.scss
+++ b/_sass/_nav.scss
@@ -22,9 +22,17 @@ nav {
   text-transform: uppercase;
   font-size: 17.82px;
   letter-spacing: 1.88px;
-  margin-left: 20px;
+  margin: 20px 0 0;
+  @media (min-width: $md) {
+    margin: 0 20px 0 0;
+  }
 }
 
 .nav-color-control {
   color: white !important;
+}
+
+.navbar-toggler {
+  color: white !important;
+  border: none;
 }
