--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -6,7 +6,7 @@
 	<div class="collapse navbar-collapse" id="navbarSupportedContent">
 		<ul class="navbar-nav ml-auto">
 			<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#about">About</a></li>
-			<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="/#contact">Contact</a></li>
+			<li class="nav-item noselect"><a data-scroll class="nav-link nav-color-control" href="{{ site.data.general.nav_contact_link }}">Contact</a></li>
 		</ul>
 	</div>
 </nav>
