--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,7 +6,7 @@
     {% else %} {{ site.title }}
     {% endif %}
   </title>
-  <meta name="description" content="{{ site.description }}">
+  <meta name="description" content="{{ site.data.general.tagline }}">
   <meta name="viewport" content="width=device-width">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/assets/images/favicon/apple-touch-icon.png">
