--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -1,6 +1,6 @@
 <section id="hero" class="noselect" data-background-text="AshleyXu">
 	<div class="d-flex flex-column justify-content-center">
-		<div id="showreel" class="lazy position-absolute abs-vertical-center" data-src="{{site.data.general.showreel_poster}}">
+		<div id="showreel" class="lazy position-absolute abs-vertical-center video-container-background-image" data-src="{{site.data.general.showreel_poster}}">
 			<video autoplay playsinline muted loop preload="auto">
 				<source src="{{ site.data.general.showreel_clip_url.mp4}}" type="video/mp4">
 				<source src="{{ site.data.general.showreel_clip_url.webm}}" type="video/webm">
