--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -13,7 +13,8 @@
 <!-- video.js youtube plugin -->
 <script src="/assets/js/youtube.min.js"></script>
 <!-- unveil -->
-<script src="/assets/js/unveil2.min.js"></script>
+<script src="/assets/js/unveil.js"></script>
+<!-- <script src="/assets/js/unveil2.min.js"></script> -->
 <!-- swup -->
 <script src="/assets/js/swup.min.js" type="text/javascript"></script>
 
