--- a/_sass/_globals.scss
+++ b/_sass/_globals.scss
@@ -60,3 +60,9 @@ section {
   margin-bottom: 70px;
   text-align: center;
 }
+
+.video-container-background-image {
+  background-position: center center;
+  background-size: cover;
+  background-blend-mode: multiply;
+}
