--- a/_includes/project_render.html
+++ b/_includes/project_render.html
@@ -12,10 +12,11 @@
 								poster="{{project.image_url}}"
 								muted
 								loop
-								preload="auto"
+								preload="none"
 								class="no-load-mobile">
 								<source data-src="{{project.clip_url.mp4}}" type="video/mp4">
 								<source data-src="{{project.clip_url.webm}}" type="video/webm">
+								<p>Sorry, your browser doesn't support embedded videos.</p>
 							</video>
 							<div class="project-text">
 								<h4 class="project-title">{{project.title}}</h4>
