feat: add new sections - hide sections if no projects detected - section name must match with type specified in project

--- a/_includes/project_render.html
+++ b/_includes/project_render.html
@@ -1,9 +1,8 @@
-<section id="{{include.id}}" data-background-text="{{include.data_background_text}}">
+<section id="{{include.type | slugify}}" data-background-text="{{include.type}}">
 	<div class="container">
-		<h4 class="section-title">{{ include.title }}</h4>
-		{% assign projects = site.projects | where: "type", include.type | sort: "order" %}
+		<h4 class="section-title">{{ include.type }}</h4>
 		<div class="row">
-			{% for project in projects %}
+			{% for project in include.projects %}
 				<div class="col-md-6 project-col
 					{% cycle 'left-col', 'right-col' %}">
 					<div class="singlevidjs project-container video-container-background-image"  data-primary-color="{{project.primary_color}}" data-background-text="{{project.title}}">
